frontEnd/def/tgc_parser.output
Terminals unused in grammar

   ORB
   CRB
   COMMA


Grammar

    0 $accept: Goal "end of file"

    1 Goal: Goal Stmt
    2     | Stmt
    3     | "end of file"

    4 Stmt: Expr NEWLINE
    5     | error NEWLINE
    6     | Dec NEWLINE

    7 Expr: Expr ADD Term
    8     | Expr SUB Term
    9     | Term

   10 Term: Term MULTI NUMBER
   11     | Term DIVIDE NUMBER
   12     | NUMBER

   13 Dec: varType ID

   14 varType: INT
   15        | FLOAT


Terminals, with rules where they appear

"end of file" (0) 0 3
error (256) 5
ID (258) 13
ORB (259)
CRB (260)
COMMA (261)
NEWLINE (262) 4 5 6
NUMBER (263) 10 11 12
ADD (264) 7
SUB (265) 8
MULTI (266) 10
DIVIDE (267) 11
INT (268) 14
FLOAT (269) 15


Nonterminals, with rules where they appear

$accept (15)
    on left: 0
Goal (16)
    on left: 1 2 3, on right: 0 1
Stmt (17)
    on left: 4 5 6, on right: 1 2
Expr (18)
    on left: 7 8 9, on right: 4 7 8
Term (19)
    on left: 10 11 12, on right: 7 8 9 10 11
Dec (20)
    on left: 13, on right: 6
varType (21)
    on left: 14 15, on right: 13


State 0

    0 $accept: . Goal "end of file"

    "end of file"  shift, and go to state 1
    error          shift, and go to state 2
    NUMBER         shift, and go to state 3
    INT            shift, and go to state 4
    FLOAT          shift, and go to state 5

    Goal     go to state 6
    Stmt     go to state 7
    Expr     go to state 8
    Term     go to state 9
    Dec      go to state 10
    varType  go to state 11


State 1

    3 Goal: "end of file" .

    $default  reduce using rule 3 (Goal)


State 2

    5 Stmt: error . NEWLINE

    NEWLINE  shift, and go to state 12


State 3

   12 Term: NUMBER .

    $default  reduce using rule 12 (Term)


State 4

   14 varType: INT .

    $default  reduce using rule 14 (varType)


State 5

   15 varType: FLOAT .

    $default  reduce using rule 15 (varType)


State 6

    0 $accept: Goal . "end of file"
    1 Goal: Goal . Stmt

    "end of file"  shift, and go to state 13
    error          shift, and go to state 2
    NUMBER         shift, and go to state 3
    INT            shift, and go to state 4
    FLOAT          shift, and go to state 5

    Stmt     go to state 14
    Expr     go to state 8
    Term     go to state 9
    Dec      go to state 10
    varType  go to state 11


State 7

    2 Goal: Stmt .

    $default  reduce using rule 2 (Goal)


State 8

    4 Stmt: Expr . NEWLINE
    7 Expr: Expr . ADD Term
    8     | Expr . SUB Term

    NEWLINE  shift, and go to state 15
    ADD      shift, and go to state 16
    SUB      shift, and go to state 17


State 9

    9 Expr: Term .
   10 Term: Term . MULTI NUMBER
   11     | Term . DIVIDE NUMBER

    MULTI   shift, and go to state 18
    DIVIDE  shift, and go to state 19

    $default  reduce using rule 9 (Expr)


State 10

    6 Stmt: Dec . NEWLINE

    NEWLINE  shift, and go to state 20


State 11

   13 Dec: varType . ID

    ID  shift, and go to state 21


State 12

    5 Stmt: error NEWLINE .

    $default  reduce using rule 5 (Stmt)


State 13

    0 $accept: Goal "end of file" .

    $default  accept


State 14

    1 Goal: Goal Stmt .

    $default  reduce using rule 1 (Goal)


State 15

    4 Stmt: Expr NEWLINE .

    $default  reduce using rule 4 (Stmt)


State 16

    7 Expr: Expr ADD . Term

    NUMBER  shift, and go to state 3

    Term  go to state 22


State 17

    8 Expr: Expr SUB . Term

    NUMBER  shift, and go to state 3

    Term  go to state 23


State 18

   10 Term: Term MULTI . NUMBER

    NUMBER  shift, and go to state 24


State 19

   11 Term: Term DIVIDE . NUMBER

    NUMBER  shift, and go to state 25


State 20

    6 Stmt: Dec NEWLINE .

    $default  reduce using rule 6 (Stmt)


State 21

   13 Dec: varType ID .

    $default  reduce using rule 13 (Dec)


State 22

    7 Expr: Expr ADD Term .
   10 Term: Term . MULTI NUMBER
   11     | Term . DIVIDE NUMBER

    MULTI   shift, and go to state 18
    DIVIDE  shift, and go to state 19

    $default  reduce using rule 7 (Expr)


State 23

    8 Expr: Expr SUB Term .
   10 Term: Term . MULTI NUMBER
   11     | Term . DIVIDE NUMBER

    MULTI   shift, and go to state 18
    DIVIDE  shift, and go to state 19

    $default  reduce using rule 8 (Expr)


State 24

   10 Term: Term MULTI NUMBER .

    $default  reduce using rule 10 (Term)


State 25

   11 Term: Term DIVIDE NUMBER .

    $default  reduce using rule 11 (Term)
